--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,7 +15,8 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 .bg{
-  background-color: grey;
+  // background-color: grey;
+  background-image: url('../assets/imgs/bg1.jpg');
 }
 .toolbar-background {
   background-color: #488aff;
